--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-2DZL66PHNN');
+  gtag('config', 'G-2DZL66PHNN', { 'debug_mode':true });
 </script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -278,4 +278,5 @@
   </script>
 </body>
 </html>
+
 
